bugfix/13765-leftAlign-unit-dropdown-and-footnotes

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -36,14 +36,15 @@
 }
 
 .general-chart {
-	margin: 70px 4vw 0 4vw;
+	margin: 10px 4vw 0 4vw;
 	text-align: center;
+	background-color: white;
 }
 
-.general-map {
-	margin: 70px 0;
-	text-align: center;
-}
+// .general-map {
+// 	margin: 70px 0;
+// 	text-align: center;
+// }
 
 div#slider-viz-div,
 div.slider-viz-div {
